syntax = "proto3";
option go_package = "pb";

import "google/protobuf/timestamp.proto";

message ChannelMessage {
    string message                      = 1;
    string topic                        = 2;
    string peerID                       = 3;
    google.protobuf.Timestamp timestamp = 4;
    bytes signature                     = 5;
}
